--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
         <script src="script.js"></script>
+        <link rel="manifest" href="manifest.json" />
     </head>
     <body>
         <div id="passwordInputDiv" class="hideable" hidden>
